# ZTextEdit

./: .gitignore  CMakeLists.txt  README.md  main.cpp  zuesedit.cpp  zuesrange.cpp
core/: zimagetextobject.cpp  zimagetextobject.h  zrange.cpp  zrange.h  ztextblockuserdata.cpp  ztextblockuserdata.h  ztextdocument.cpp  ztextdocument.h
gui/: zmainwindow.cpp  zmainwindow.h  ztextedit.cpp  ztextedit.h
